Added a title bar and some text for the index page

--- a/GRChombo/app/views/layouts/application.html.erb
+++ b/GRChombo/app/views/layouts/application.html.erb
@@ -4,16 +4,52 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title><%= @title %> | GRChombo</title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+<header>
 
-    <%= yield %>
+  <div class="row show-for-small-only">
+    <div class="small-12 columns">
+      <div class="top-bar">
+        <ul class="vertical menu" data-accordion-menu>
+          <li>
+            <a href="#">Menu</a>
+            <ul class="menu vertical nested">
+              <li><a href="/index">Home</a></li>
+              <li><a href="/collaborators">Collaborators</a></li>
+              <li><a href="/publications">Publications</a></li>
+              <li><a href="/movies">Movies</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-  </body>
+<div class="row hide-for-small-only">
+  <div class="medium-12 columns">
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li><a href="/index">Home</a></li>
+          <li><a href="/collaborators">Collaborators</a></li>
+          <li><a href="/publications">Publications</a></li>
+          <li><a href="/movies">Movies</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+</header>
+
+<%= yield %>
+
+<%= javascript_include_tag "application" %>
+
+</body>
 </html>
