Added the first image from the website

--- a/GRChombo/app/views/welcome/index.html.erb
+++ b/GRChombo/app/views/welcome/index.html.erb
@@ -9,6 +9,6 @@
        GRChombo on the COSMOS supercomputer</a>
   </div>
   <div class="large-6 columns">
-    <img src="images/TriBH_3.png" alt="slide 1" />
+    <%=image_tag("TriBH_3.png", alt: "3 Blackhole Merger", title: "3 Blackhole Merger")%>
   </div>
 </div>
