--- a/GRChombo/app/views/welcome/collaborators.html.erb
+++ b/GRChombo/app/views/welcome/collaborators.html.erb
@@ -1,3 +1,5 @@
+<% @title='Collaborators' %>
+
 <div class="row">
   <div class="large-12 columns">
     <h1>GRChombo team</h1>
@@ -16,25 +18,25 @@
        <%=image_tag("Katy.jpg", alt: "Katy", title: "Katy")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Pau.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Pau.jpg", alt: "Pau", title: "Pau")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Hal.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Hal.jpg", alt: "Hal", title: "Hal")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Markus.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Eugene.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Saran.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Saran.jpg", alt: "Saran", title: "Saran")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("James.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("James.jpg", alt: "James", title: "James")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Thomas.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
      </div>
     <p>Core developers from left to right: Katy Clough (KCL), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Saran Tunyasuvunakool (QMUL), James Cook (KCL), Thomas Helfer (KCL)
     </p>
@@ -42,16 +44,16 @@
   <div class="large-6 columns">
      <h2>Collaborators</h2>
      <div class="large-3 columns">
-       <%=image_tag("Hans.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Hans.jpg", alt: "Hans", title: "Hans")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Uli.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Uli.jpg", alt: "Uli", title: "Uli")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Helvi.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Helvi.jpg", alt: "Helvi", title: "Helvi")%>
      </div>
      <div class="large-3 columns">
-       <%=image_tag("Ben.jpg", alt: "Katy", title: "Katy")%>
+       <%=image_tag("Ben.jpg", alt: "Ben", title: "Ben")%>
      </div>
     <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
     (Nottingham), Benjamin Withers (QMUL)
