--- a/GRChombo/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/GRChombo/app/assets/stylesheets/foundation_and_overrides.scss
@@ -50,3 +50,11 @@
 //
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
+.top-bar{
+	color: white;
+}
+
+.top-bar a{
+	color: white;
+}
