--- a/GRChombo/app/views/welcome/collaborators.html.erb
+++ b/GRChombo/app/views/welcome/collaborators.html.erb
@@ -14,28 +14,28 @@
   </div>
   <div class="large-6 columns">
      <h2>Core developers</h2>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Katy.jpg", alt: "Katy", title: "Katy")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Pau.jpg", alt: "Pau", title: "Pau")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Hal.jpg", alt: "Hal", title: "Hal")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Saran.jpg", alt: "Saran", title: "Saran")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("James.jpg", alt: "James", title: "James")%>
      </div>
-     <div class="large-3 columns">
+     <div class="small-3 columns">
        <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
      </div>
     <p>Core developers from left to right: Katy Clough (KCL), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Saran Tunyasuvunakool (QMUL), James Cook (KCL), Thomas Helfer (KCL)
@@ -43,16 +43,16 @@
   </div>
   <div class="large-6 columns">
      <h2>Collaborators</h2>
-     <div class="large-3 columns">
+     <div class="large-3 small-6 columns">
        <%=image_tag("Hans.jpg", alt: "Hans", title: "Hans")%>
      </div>
-     <div class="large-3 columns">
+     <div class="large-3 small-6 columns">
        <%=image_tag("Uli.jpg", alt: "Uli", title: "Uli")%>
      </div>
-     <div class="large-3 columns">
+     <div class="large-3 small-6 columns">
        <%=image_tag("Helvi.jpg", alt: "Helvi", title: "Helvi")%>
      </div>
-     <div class="large-3 columns">
+     <div class="large-3 small-6 columns">
        <%=image_tag("Ben.jpg", alt: "Ben", title: "Ben")%>
      </div>
     <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
