Added a responsive menu bar

--- a/GRChombo/app/views/layouts/application.html.erb
+++ b/GRChombo/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
 
 <header>
 
-  <div class="top-bar">
+  <div class="title-bar" data-responsive-toggle="grchombo-menu" data-hide-for="medium">
+    <button class="menu-icon" type="button" data-toggle></button>
+    <div class="title-bar-title">Menu</div>
+  </div>
+
+  <div class="top-bar" id="grchombo-menu">
     <div class="top-bar-left">
-      <ul class="dropdown menu" data-dropdown-menu>
+      <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
         <li class="menu-text">GRChombo</li>
         <li>
           <li><a href="/index">Home</a></li>
