--- a/GRChombo/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/GRChombo/app/assets/stylesheets/foundation_and_overrides.scss
@@ -51,6 +51,20 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
+.title-bar {
+    @include breakpoint(medium) {
+        display: none;
+    }
+}
+
+.top-bar {
+    display: none;
+
+    @include breakpoint(medium) {
+        display: block;
+    }
+}
+
 .top-bar{
 	color: white;
 }
