--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -38,8 +38,10 @@
      <div class="small-3 columns">
        <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
      </div>
+     <div class="small-12 columns">
     <p>Core developers from left to right: Katy Clough (KCL), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Saran Tunyasuvunakool (QMUL), James Cook (KCL), Thomas Helfer (KCL)
     </p>
+  </div>
   </div>
   <div class="large-6 columns">
      <h2>Collaborators</h2>
@@ -55,9 +57,11 @@
      <div class="large-3 small-6 columns">
        <%=image_tag("Ben.jpg", alt: "Ben", title: "Ben")%>
      </div>
+     <div class="small-12 columns">
     <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
     (Nottingham), Benjamin Withers (QMUL)
     </p>
+  </div>
   </div>
   <div class="large-12 columns">
     <p>GRChombo is primarily developed on the <a href="http://www.cosmos.damtp.cam.ac.uk/">COSMOS supercomputer</a>
