Update collaborators page

--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -10,6 +10,7 @@
     <li><a href="http://www.alcf.anl.gov/">Argonne Leadership Computing Facility, Argonne National Laboratory</a></li>
     <li><a href="http://www.kcl.ac.uk/nms/depts/physics/research/tppc/index.aspx">Department of Physics, King's College London</a></li>
     <li><a href="http://www.maths.qmul.ac.uk">School of Mathematical Sciences, Queen Mary University of London</a></li>
+    <li><a href="https://www.uni-goettingen.de/">Georg-August University, Goettingen, Germany</a></li>
     </ul>
   </div>
   <div class="large-6 columns">
@@ -39,7 +40,7 @@
        <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
      </div>
      <div class="small-12 columns">
-    <p>Core developers from left to right: Katy Clough (KCL), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Saran Tunyasuvunakool (QMUL), James Cook (KCL), Thomas Helfer (KCL)
+    <p>Core developers from left to right: Katy Clough (Goettingen), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Saran Tunyasuvunakool (QMUL), James Cook (KCL), Thomas Helfer (KCL)
     </p>
   </div>
   </div>
@@ -59,7 +60,7 @@
      </div>
      <div class="small-12 columns">
     <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
-    (Nottingham), Benjamin Withers (QMUL)
+    (KCL), Benjamin Withers (QMUL)
     </p>
   </div>
   </div>
@@ -73,5 +74,6 @@
     Our research also uses resources of the <a href="http://www.alcf.anl.gov/">Argonne Leadership Computing Facility</a>,
     which is a DOE Office of Science User Facility supported under Contract DE-AC02-06CH11357.
     </p>
+    <p>The collaboration also gratefully acknowledges the computer resources at Marenostrum IV, Finis Terrae II and LaPalma and the technical support provided by the Barcelona Supercomputing Center via the PRACE grant Tier-0 PPFPWG, by the Supercomputing Centre of Galicia and La Palma Astrophysics Centre via BSC/RES grants AECT-2017-2-0011 and AECT-2017-3-0009.</p>
   </div>
 </div>
