--- a/app/views/welcome/movies.html.erb
+++ b/app/views/welcome/movies.html.erb
@@ -7,15 +7,20 @@
   </div>
   <div class="large-6 columns">
     <div class="flex-video">
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/GqUi_Co9HXw" frameborder="0" allowfullscreen></iframe>
+       <iframe width="420" height="315" src="https://www.youtube.com/embed/C2IL7nN6mlA" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
   <div class="large-6 columns">
     <div class="flex-video">
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/bOmV5XrGV_U" frameborder="0" allowfullscreen></iframe>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/TeEBQ19hPzA" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
-  <div class="large-12 columns">
+  <div class="large-6 columns">
+    <div class="flex-video">
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/GqUi_Co9HXw" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+  <div class="large-6 columns">
     <div class="flex-video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/hBvaHLhlhE4" frameborder="0" allowfullscreen></iframe>
     </div>
