--- a/app/views/welcome/publications.html.erb
+++ b/app/views/welcome/publications.html.erb
@@ -6,7 +6,7 @@
     <p>Papers which make use of GRChombo are listed here:</p>
   </div>
   <div class="large-12 columns">
-    <p>Katy Clough, Raphael Flauger, Eugene A. Lim (2017). <strong>Robustness of Inflation to Large Tensor Perturbations.</strong> ePrint at <a href="http://arxiv.org">arXiv:1712.tbc</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcZv6RKNPnQ_1NcHRvgP_b_F">Inflation - tensor perturbations</a>.
+    <p>Katy Clough, Raphael Flauger, Eugene A. Lim (2017). <strong>Robustness of Inflation to Large Tensor Perturbations.</strong> ePrint at <a href="https://arxiv.org/abs/1712.07352">arXiv:1712.07352</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcZv6RKNPnQ_1NcHRvgP_b_F">Inflation - tensor perturbations</a>.
     </p>
     <p>Pau Figueras, Markus Kunesch, Luis Lehner, Saran Tunyasuvunakool (2017). <strong>End Point of the Ultraspinning Instability and Violation of Cosmic Censorship.</strong> Published in <a href="https://doi.org/10.1103/PhysRevLett.118.151103">Phys.Rev.Lett. 118 (2017) 15, 151103</a>. ePrint at <a href="https://arxiv.org/abs/1702.01755">arXiv:1702.01755</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcZCXofSUVFIU5R3zYRmCpgg">Ultraspinning Myers-Perry</a>.
     </p>
