--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -27,11 +27,12 @@
      <div class="small-3 columns">
        <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
      </div>
+     <div class="small-12 columns">
+    <p>                     
+    </p>
+  </div>
      <div class="small-3 columns">
        <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
-     </div>
-     <div class="small-3 columns">
-       <%=image_tag("Saran.jpg", alt: "Saran", title: "Saran")%>
      </div>
      <div class="small-3 columns">
        <%=image_tag("James.jpg", alt: "James", title: "James")%>
@@ -39,8 +40,11 @@
      <div class="small-3 columns">
        <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
      </div>
+     <div class="small-3 columns">
+       <%=image_tag("Josu.jpg", alt: "Josu", title: "Josu")%>
+     </div>
      <div class="small-12 columns">
-    <p>Core developers from left to right: Katy Clough (Goettingen), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Saran Tunyasuvunakool (QMUL), James Cook (KCL), Thomas Helfer (KCL)
+    <p>Core developers from left to right: Katy Clough (Goettingen), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), James Cook (KCL), Thomas Helfer (KCL), Josu C. Aurrekoetxea (KCL)
     </p>
   </div>
   </div>
@@ -55,12 +59,22 @@
      <div class="large-3 small-6 columns">
        <%=image_tag("Helvi.jpg", alt: "Helvi", title: "Helvi")%>
      </div>
+     <div class="small-12 columns">
+    <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
+    (KCL)
+    </p>
+  </div>
+  </div>
+  <div class="large-6 columns">
+     <h2> Former Developers</h2>
+     <div class="large-3 small-6 columns">
+       <%=image_tag("Saran.jpg", alt: "Saran", title: "Saran")%>
+     </div>
      <div class="large-3 small-6 columns">
        <%=image_tag("Ben.jpg", alt: "Ben", title: "Ben")%>
      </div>
      <div class="small-12 columns">
-    <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
-    (KCL), Benjamin Withers (QMUL)
+    <p>Former developers from left to right: Saran Tunyasuvunakool (QMUL), Benjamin Withers (QMUL)
     </p>
   </div>
   </div>
