Add link to doxygen

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,5 +15,6 @@
   </div>
   <div class="large-12 columns">
     <p><strong>Getting GRChombo:</strong> The code is now available at <a href="https://github.com/GRChombo">www.github.com/GRChombo</a>. Documentation to help you get started is provided in the <a href="https://github.com/GRChombo/GRChombo/wiki">GRChombo Wiki</a>. Please note the licence and disclaimers!</p>
+    <p><strong>Doxygen documentation</strong> can be found <a href="http://grchombo.github.io/Doxygen/html/index.html">here</a>.</p>
   </div>
 </div>
