Added Amelia's name and picture
Added Amelia's name and picture to the collaborators list.

--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -59,9 +59,12 @@
      <div class="large-3 small-6 columns">
        <%=image_tag("Helvi.jpg", alt: "Helvi", title: "Helvi")%>
      </div>
+     <div class="large-3 small-6 columns">
+       <%=image_tag("Amelia.jpg", alt: "Amelia", title: "Amelia")%>
+     </div>
      <div class="small-12 columns">
     <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
-    (KCL)
+    (KCL), Amelia Drew (Cambridge)
     </p>
   </div>
   </div>
