--- a/app/views/welcome/publications.html.erb
+++ b/app/views/welcome/publications.html.erb
@@ -6,6 +6,8 @@
     <p>Papers which make use of GRChombo are listed here:</p>
   </div>
   <div class="large-12 columns">
+    <p>Thomas Helfer, Eugene A. Lim, Marcos A. G. Garcia, Mustafa A. Amin (2018). <strong>Gravitational Wave Emission from Collisions of Compact Scalar Solitons.</strong> ePrint at <a href="https://arxiv.org/pdf/1802.06733.pdf">arXiv:1802.06733</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcahgvc5TvBk5qtXAzkSyHPe">Collisions of Compact Scalar Soliton</a>.
+    </p>
     <p>Katy Clough, Raphael Flauger, Eugene A. Lim (2017). <strong>Robustness of Inflation to Large Tensor Perturbations.</strong> ePrint at <a href="https://arxiv.org/abs/1712.07352">arXiv:1712.07352</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcZv6RKNPnQ_1NcHRvgP_b_F">Inflation - tensor perturbations</a>.
     </p>
     <p>Pau Figueras, Markus Kunesch, Luis Lehner, Saran Tunyasuvunakool (2017). <strong>End Point of the Ultraspinning Instability and Violation of Cosmic Censorship.</strong> Published in <a href="https://doi.org/10.1103/PhysRevLett.118.151103">Phys.Rev.Lett. 118 (2017) 15, 151103</a>. ePrint at <a href="https://arxiv.org/abs/1702.01755">arXiv:1702.01755</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcZCXofSUVFIU5R3zYRmCpgg">Ultraspinning Myers-Perry</a>.
