--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -41,7 +41,7 @@
        <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
      </div>
      <div class="small-3 columns">
-       <%=image_tag("Josu.jpg", alt: "Josu", title: "Josu")%>
+       <%=image_tag("Josu2.jpg", alt: "Josu", title: "Josu")%>
      </div>
      <div class="small-3 columns">
        <%=image_tag("Amelia.jpg", alt: "Josu", title: "Josu")%>
