--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -10,52 +10,61 @@
     <li><a href="http://www.alcf.anl.gov/">Argonne Leadership Computing Facility, Argonne National Laboratory</a></li>
     <li><a href="http://www.kcl.ac.uk/nms/depts/physics/research/tppc/index.aspx">Department of Physics, King's College London</a></li>
     <li><a href="http://www.maths.qmul.ac.uk">School of Mathematical Sciences, Queen Mary University of London</a></li>
-    <li><a href="https://www.uni-goettingen.de/">Georg-August University, Goettingen, Germany</a></li>
+    <li><a href="https://www2.physics.ox.ac.uk/">Department of Physics, University of Oxford</a></li>
     </ul>
   </div>
-  <div class="large-6 columns">
+  <div class="large-9 small-centered columns">
      <h2>Core developers</h2>
-     <div class="small-3 columns">
-       <%=image_tag("Katy.jpg", alt: "Katy", title: "Katy")%>
-     </div>
-     <div class="small-3 columns">
-       <%=image_tag("Pau.jpg", alt: "Pau", title: "Pau")%>
-     </div>
-     <div class="small-3 columns">
-       <%=image_tag("Hal.jpg", alt: "Hal", title: "Hal")%>
-     </div>
-     <div class="small-3 columns">
-       <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
-     </div>
-     <div class="small-12 columns">
-    <p>                     
-    </p>
-  </div>
-     <div class="small-3 columns">
-       <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
-     </div>
-     <div class="small-3 columns">
-       <%=image_tag("James.jpg", alt: "James", title: "James")%>
-     </div>
-     <div class="small-3 columns">
-       <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
-     </div>
-     <div class="small-3 columns">
+     <div class="small-2 columns">
        <%=image_tag("Josu.jpg", alt: "Josu", title: "Josu")%>
      </div>
-     <div class="small-3 columns">
-       <%=image_tag("Amelia.jpg", alt: "Josu", title: "Josu")%>
+     <div class="small-2 columns">
+       <%=image_tag("Katy.jpg", alt: "Katy", title: "Katy")%>
      </div>
-     <div class="small-3 columns">
-       <%=image_tag("Miren.jpg", alt: "Josu", title: "Josu")%>
+     <div class="small-2 columns">
+       <%=image_tag("Amelia.jpg", alt: "Amelia", title: "Amelia")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("Pau.jpg", alt: "Pau", title: "Pau")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("Hal.jpg", alt: "Hal", title: "Hal")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("Tiago.jpg", alt: "Tiago", title: "Tiago")%>
+     </div>
+     <div class="large-12 columns">
+    <p>
+    </p>
+  </div>
+    <div class="small-2 columns">
+       <%=image_tag("Chenxia.jpg", alt: "Chenxia", title: "Chenxia")%>
+     </div>
+    <div class="small-2 columns">
+       <%=image_tag("Thomas.jpg", alt: "Thomas", title: "Thomas")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("Miren.jpg", alt: "Miren", title: "Miren")%>
+     </div>
+     <div class="small-2 columns">
+       <%=image_tag("James.jpg", alt: "James", title: "James")%>
      </div>
      <div class="small-12 columns">
-    <p>Core developers from left to right: Katy Clough (Goettingen), Pau Figueras (QMUL), Hal Finkel (ANL), Markus Kunesch (Cambridge), Eugene Lim (KCL), James Cook (KCL), Thomas Helfer (KCL), Josu C. Aurrekoetxea (KCL), Amelia Drew (Cambridge), Miren Radia (Cambridge)
+    <p><strong>Core developers from left to right:</strong> Josu C. Aurrekoetxea (KCL), Katy Clough (Oxford), Amelia Drew (Cambridge), Pau Figueras (QMUL), Hal Finkel (ANL), Tiago França (QMUL), Chenxia Gu (QMUL), Thomas Helfer (KCL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Miren Radia (Cambridge), James Widdicombe (KCL)
     </p>
   </div>
   </div>
   <div class="large-6 columns">
      <h2>Collaborators</h2>
+     <div class="large-3 small-6 columns">
+       <%=image_tag("Michalis.jpg", alt: "Amelia", title: "Amelia")%>
+     </div>
      <div class="large-3 small-6 columns">
        <%=image_tag("Hans.jpg", alt: "Hans", title: "Hans")%>
      </div>
@@ -66,8 +75,8 @@
        <%=image_tag("Helvi.jpg", alt: "Helvi", title: "Helvi")%>
      </div>
      <div class="small-12 columns">
-    <p>Collaborators from left to right: Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
-    (KCL), Amelia Drew (Cambridge)
+    <p><strong>Collaborators from left to right:</strong> Michalis Agathos (Cambridge), Hans Bantilan (QMUL), Ulrich Sperhake (Cambridge), Helvi Witek
+    (KCL)
     </p>
   </div>
   </div>
@@ -80,12 +89,12 @@
        <%=image_tag("Ben.jpg", alt: "Ben", title: "Ben")%>
      </div>
      <div class="small-12 columns">
-    <p>Former developers from left to right: Saran Tunyasuvunakool (QMUL), Benjamin Withers (QMUL)
+    <p><strong>Former developers from left to right:</strong> Saran Tunyasuvunakool (QMUL), Benjamin Withers (QMUL)
     </p>
   </div>
   </div>
   <div class="large-12 columns">
-    <p>GRChombo is primarily developed on the <a href="http://www.cosmos.damtp.cam.ac.uk/">COSMOS supercomputer</a> at Department of Applied Mathematics and Theoretical Physics (DAMTP) at the University of Cambridge. The GRChombo team is grateful for the continuing assistance from the team at the COSMOS Intel® Parallel Computing Center at the University of Cambridge. The COSMOS Shared Memory system is operated on behalf of the <a href="http://www.dirac.ac.uk/">STFC DiRAC HPC Facility</a>. This equipment is funded by BIS National E-infrastructure capital grant ST/J005673/1 and STFC grants ST/H008586/1, ST/K00333X/1.    This equipment is funded by BIS National E-infrastructure capital grant ST/J005673/1 and STFC grants ST/H008586/1, ST/K00333X/1. </p>
+    <p>GRChombo was primarily developed on the <a href="http://www.cosmos.damtp.cam.ac.uk/">COSMOS supercomputer</a> at Department of Applied Mathematics and Theoretical Physics (DAMTP) at the University of Cambridge. The GRChombo team is grateful for the continuing assistance from the team at the COSMOS Intel® Parallel Computing Center at the University of Cambridge. </p>
     <p><a href="http://www.cosmos.damtp.cam.ac.uk/news/grchombo-a-new-numerical-general-relativity-code-with-adaptive-mesh-refinement"> GRChombo on the COSMOS supercomputer</a> </p>
     <p>Our research also uses resources of the <a href="http://www.alcf.anl.gov/">Argonne Leadership Computing Facility</a>, which is a DOE Office of Science User Facility supported under Contract DE-AC02-06CH11357.</p>
     <p>The collaboration also gratefully acknowledges the computer resources at Marenostrum IV, Finis Terrae II and LaPalma and the technical support provided by the Barcelona Supercomputing Center via the PRACE grant Tier-0 PPFPWG, by the Supercomputing Centre of Galicia and La Palma Astrophysics Centre via BSC/RES grants AECT-2017-2-0011 and AECT-2017-3-0009.</p>
