--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,22 @@
     </p>
     <p><strong>Getting GRChombo:</strong> The code is now available at <a href="https://github.com/GRChombo">www.github.com/GRChombo</a>. Documentation to help you get started is provided in the <a href="https://github.com/GRChombo/GRChombo/wiki">GRChombo Wiki</a>. Please note the licence and disclaimers!</p>
     <p><strong>Doxygen documentation</strong> can be found <a href="http://grchombo.github.io/Doxygen/html/index.html">here</a>.</p>
+    <p><strong>Supported by </strong>(a) Royal Society (b) ERC (c) UKRI/STFC (d) INTEL (e) PRACE</a>.</p>
+     <div class="small-4 columns">
+       <%=image_tag("logo-rs.png", alt: "The Royal Society", title: "The Royal Society")%>
+     </div>
+     <div class="small-4 columns">
+       <%=image_tag("logoerc.gif", alt: "ERC", title: "ERC")%>
+     </div>
+     <div class="small-4 columns">
+       <%=image_tag("logostfc.png", alt: "Intel", title: "UKRI/STFC")%>
+     </div>
+     <div class="small-4 columns">
+       <%=image_tag("logointel.png", alt: "Intel", title: "Intel")%>
+     </div>
+     <div class="small-4 columns">
+       <%=image_tag("logoprace.png", alt: "Prace", title: "Prace")%>
+     </div>
   </div>
   <div class="large-6 columns">
     <%=image_tag("TriBH_3.png", alt: "3 Blackhole Merger", title: "3 Blackhole Merger")%>
