--- a/app/views/welcome/publications.html.erb
+++ b/app/views/welcome/publications.html.erb
@@ -6,6 +6,12 @@
     <p>Papers which make use of GRChombo are listed here:</p>
   </div>
   <div class="large-12 columns">
+    <p>Thomas Helfer, Josu C. Aurrekoetxea, Eugene A. Lim (2018). <strong>Cosmic String Loop Collapse in Full General Relativity.</strong> ePrint at <a href="https://arxiv.org/abs/1808.06678v2">arXiv:1808.06678v2</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcaAxkuQ3BtjILn_tJu-jXxY">Cosmic String Loop Collapse in Full GR</a>.
+    </p>
+    <p>Katy Clough, Tim Dietrich, Jens C. Niemeyer (2018). <strong>Axion star collisions with black holes and neutron stars in full 3D numerical relativity.</strong> ePrint at <a href="https://arxiv.org/abs/1808.04668">arXiv:1808.04668</a>.
+    </p>
+    <p>James Y. Widdicombe, Thomas Helfer, David J.E. Marsh, Eugene A. Lim (2018). <strong>Formation of Relativistic Axion Stars.</strong> ePrint at <a href="https://arxiv.org/abs/1806.09367v2">arXiv:1806.09367v2</a>.
+    </p>
     <p>Thomas Helfer, Eugene A. Lim, Marcos A. G. Garcia, Mustafa A. Amin (2018). <strong>Gravitational Wave Emission from Collisions of Compact Scalar Solitons.</strong> ePrint at <a href="https://arxiv.org/pdf/1802.06733.pdf">arXiv:1802.06733</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcahgvc5TvBk5qtXAzkSyHPe">Collisions of Compact Scalar Soliton</a>.
     </p>
     <p>Katy Clough, Raphael Flauger, Eugene A. Lim (2017). <strong>Robustness of Inflation to Large Tensor Perturbations.</strong> ePrint at <a href="https://arxiv.org/abs/1712.07352">arXiv:1712.07352</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcZv6RKNPnQ_1NcHRvgP_b_F">Inflation - tensor perturbations</a>.
