--- a/app/views/welcome/movies.html.erb
+++ b/app/views/welcome/movies.html.erb
@@ -7,6 +7,16 @@
   </div>
   <div class="large-6 columns">
     <div class="flex-video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nHH3gTEjMPo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+  <div class="large-6 columns">
+    <div class="flex-video">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U5CkThsDU6w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+  <div class="large-6 columns">
+    <div class="flex-video">
        <iframe width="420" height="315" src="https://www.youtube.com/embed/C2IL7nN6mlA" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
