--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -47,16 +47,23 @@
        <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
      </div>
      <div class="small-2 columns">
+       <%=image_tag("Kacper.jpg", alt: "Kacper", title: "Kacper")%>
+    </div>
+     <div class="small-2 columns">
        <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
      </div>
      <div class="small-2 columns">
        <%=image_tag("Miren.jpg", alt: "Miren", title: "Miren")%>
      </div>
+     <div class="large-12 columns">
+    <p>
+    </p>
+  </div>
      <div class="small-2 columns">
        <%=image_tag("James.jpg", alt: "James", title: "James")%>
-     </div>
+    </div>
      <div class="small-12 columns">
-    <p><strong>Core developers from left to right:</strong> Josu C. Aurrekoetxea (KCL), Katy Clough (Oxford), Amelia Drew (Cambridge), Pau Figueras (QMUL), Hal Finkel (ANL), Tiago França (QMUL), Chenxia Gu (QMUL), Thomas Helfer (KCL), Markus Kunesch (Cambridge), Eugene Lim (KCL), Miren Radia (Cambridge), James Widdicombe (KCL)
+    <p><strong>Core developers from left to right:</strong> Josu C. Aurrekoetxea (KCL), Katy Clough (Oxford), Amelia Drew (Cambridge), Pau Figueras (QMUL), Hal Finkel (ANL), Tiago França (QMUL), Chenxia Gu (QMUL), Thomas Helfer (KCL), Kacper Kornet (Cambridge), Markus Kunesch (Cambridge), Eugene Lim (KCL), Miren Radia (Cambridge), James Widdicombe (KCL)
     </p>
   </div>
   </div>
