--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,6 +29,6 @@
      </div>
   </div>
   <div class="large-6 columns">
-    <%=image_tag("TriBH_3.png", alt: "3 Blackhole Merger", title: "3 Blackhole Merger")%>
+    <%=image_tag("logowhite.gif", alt: "GRChombo logo", title: "GRChombo logo")%>
   </div>
 </div>
