--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -11,6 +11,7 @@
     <li><a href="http://www.kcl.ac.uk/nms/depts/physics/research/tppc/index.aspx">Department of Physics, King's College London</a></li>
     <li><a href="http://www.maths.qmul.ac.uk">School of Mathematical Sciences, Queen Mary University of London</a></li>
     <li><a href="https://www2.physics.ox.ac.uk/">Department of Physics, University of Oxford</a></li>
+    <li><a href="https://uclouvain.be/">Department of Physics, University of Louvain</a></li>
     </ul>
   </div>
   <div class="large-9 small-centered columns">
@@ -47,23 +48,26 @@
        <%=image_tag("Markus.jpg", alt: "Markus", title: "Markus")%>
      </div>
      <div class="small-2 columns">
+       <%=image_tag("Cristian.png", alt: "Cristian", title: "Cristian")%>
+     </div>
+     <div class="small-2 columns">
        <%=image_tag("Kacper.jpg", alt: "Kacper", title: "Kacper")%>
     </div>
      <div class="small-2 columns">
        <%=image_tag("Eugene.jpg", alt: "Eugene", title: "Eugene")%>
-     </div>
-     <div class="small-2 columns">
-       <%=image_tag("Miren.jpg", alt: "Miren", title: "Miren")%>
      </div>
      <div class="large-12 columns">
     <p>
     </p>
   </div>
      <div class="small-2 columns">
+       <%=image_tag("Miren.jpg", alt: "Miren", title: "Miren")%>
+     </div>
+     <div class="small-2 columns">
        <%=image_tag("James.jpg", alt: "James", title: "James")%>
     </div>
      <div class="small-12 columns">
-    <p><strong>Core developers from left to right:</strong> Josu C. Aurrekoetxea (KCL), Katy Clough (Oxford), Amelia Drew (Cambridge), Pau Figueras (QMUL), Hal Finkel (ANL), Tiago França (QMUL), Chenxia Gu (QMUL), Thomas Helfer (KCL), Kacper Kornet (Cambridge), Markus Kunesch (Cambridge), Eugene Lim (KCL), Miren Radia (Cambridge), James Widdicombe (KCL)
+    <p><strong>Core developers from left to right:</strong> Josu C. Aurrekoetxea (KCL), Katy Clough (Oxford), Amelia Drew (Cambridge), Pau Figueras (QMUL), Hal Finkel (ANL), Tiago França (QMUL), Chenxia Gu (QMUL), Thomas Helfer (KCL), Cristian Joana (UCLouvain), Kacper Kornet (Cambridge), Markus Kunesch (Cambridge), Eugene Lim (KCL), Miren Radia (Cambridge), James Widdicombe (KCL)
     </p>
   </div>
   </div>
