added university of louvain

--- a/app/views/welcome/collaborators.html.erb
+++ b/app/views/welcome/collaborators.html.erb
@@ -11,7 +11,7 @@
     <li><a href="http://www.kcl.ac.uk/nms/depts/physics/research/tppc/index.aspx">Department of Physics, King's College London</a></li>
     <li><a href="http://www.maths.qmul.ac.uk">School of Mathematical Sciences, Queen Mary University of London</a></li>
     <li><a href="https://www2.physics.ox.ac.uk/">Department of Physics, University of Oxford</a></li>
-    <li><a href="https://uclouvain.be/">Department of Physics, University of Louvain</a></li>
+    <li><a href="https://uclouvain.be/">Institute of Mathematics and Physics, University of Louvain</a></li>
     </ul>
   </div>
   <div class="large-9 small-centered columns">
