--- a/app/views/welcome/publications.html.erb
+++ b/app/views/welcome/publications.html.erb
@@ -6,7 +6,11 @@
     <p>Papers which make use of GRChombo are listed here:</p>
   </div>
   <div class="large-12 columns">
-    <p>Thomas Helfer, Josu C. Aurrekoetxea, Eugene A. Lim (2018). <strong>Cosmic String Loop Collapse in Full General Relativity.</strong> ePrint at <a href="https://arxiv.org/abs/1808.06678v2">arXiv:1808.06678v2</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcaAxkuQ3BtjILn_tJu-jXxY">Cosmic String Loop Collapse in Full GR</a>.
+    <p> Francesco Muia, Michele Cicoli, Katy Clough, Francisco Pedro, Fernando Quevedo, Gian Paolo Vacca (2019). <strong>The Fate of Dense Scalar Stars.</strong> ePrint at <a href="https://arxiv.org/abs/1906.09346">arXiv:1906.093466</a>. 
+    </p>
+    <p>Katy Clough, Pedro G. Ferreira, Macarena Lagos (2019). <strong>On the growth of massive scalar hair around a Schwarzschild black hole.</strong> ePrint at <a href="https://arxiv.org/abs/1904.12783">arXiv:1904.12783</a>.
+    </p>
+    <p>Thomas Helfer, Josu C. Aurrekoetxea, Eugene A. Lim (2018). <strong>Cosmic String Loop Collapse in Full General Relativity.</strong> Published in <a href="https://link.aps.org/doi/10.1103/PhysRevD.99.104028">Phys.Rev. D99 (2019) no.10, 104028</a>. ePrint at <a href="https://arxiv.org/abs/1808.06678v2">arXiv:1808.06678v2</a>. Movies at the YouTube playlist <a href="https://www.youtube.com/playlist?list=PLSkfizpQDrcaAxkuQ3BtjILn_tJu-jXxY">Cosmic String Loop Collapse in Full GR</a>.
     </p>
     <p>Katy Clough, Tim Dietrich, Jens C. Niemeyer (2018). <strong>Axion star collisions with black holes and neutron stars in full 3D numerical relativity.</strong> ePrint at <a href="https://arxiv.org/abs/1808.04668">arXiv:1808.04668</a>.
     </p>
